Updating code based on 17